# Copyright (c) 2025 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_library("h266_common") {
  sources = [
    "h266_common.cc",
    "h266_common.h",
  ]
  deps = [
    "../../rtc_base:checks",
    "../../rtc_base:rtc_base_approved",
  ]
}

if (rtc_include_tests) {
  rtc_library("h266_common_unittest") {
    testonly = true
    sources = [ "h266_common_unittest.cc" ]
    deps = [
      ":h266_common",
      "../../test:test_support",
    ]
  }
}