# Copyright (c) 2025 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../../webrtc.gni")

declare_args() {
  # Enable H.266 encoder using VVenC
  rtc_use_vvenc_h266_encoder = rtc_use_h266

  # Enable H.266 decoder using VVdeC
  rtc_use_vvdec_h266_decoder = rtc_use_h266
}